# beaglebone-crosscompiling

./: .gitignore  BBBToolchain.cmake  CMakeLists.txt  README.md  bbb-env-set.sh  bbb_path_helper.sh
eclipse/: .cproject  .project
